--- a/about.html
+++ b/about.html
@@ -69,8 +69,8 @@
       <!-- *********** REST ************* -->
       <div class="container">
         <div class="summary">
-          <p>The short version is I am a researcher at the <a href="http://c4sr.columbia.edu/">Center for Spatial Research</a> at Columbia University and an adjunct assistant professor of urban planning and architecture at the <a href="http://www.arch.columbia.edu/"> Graduate School of Architecture, Planning and Preservation (GSAPP)</a>.</p>
-          <p>I do research at the intersection of data, GIS, urbanism, architecture and the humanities and I teach graduate level <a href="https://github.com/juanfrans-courses">seminars</a> on mapping, advanced GIS and data visualization. In the past I've worked as a research scholar at the <a href="http://spatialinformationdesignlab.org/">Spatial Information Design Lab</a>, an architectural designer for <a href="http://www.cz-studio.com/">Carlos Zapata Studio</a> and <a href="http://www.dgtarchitects.com/">D.G.T. Architects</a>, and as the GIS project coordinator for the <a href="http://www.catholiccharitiesny.org/">Catholic Charities</a>.</p>
+          <p>The short version is I am a researcher at the <a href="https://brown.columbia.edu/">Brown Institute for Media Innovation</a> at Columbia University.<p>
+          <p>I work at the intersection of data, GIS, visualization, journalism, architecture, urbanism, and the humanities, and I teach graduate level <a href="https://github.com/juanfrans-courses">workshops and seminars</a> on mapping, advanced GIS and data visualization. In the past I've worked as a research scholar at the <a href="http://c4sr.columbia.edu/">Center for Spatial Research</a> and the <a href="http://spatialinformationdesignlab.org/">Spatial Information Design Lab</a>, as an architectural designer for <a href="http://www.cz-studio.com/">Carlos Zapata Studio</a> and D.G.T. Architects, and as the GIS project coordinator for the <a href="http://www.catholiccharitiesny.org/">Catholic Charities</a>.</p>
         </div>
         <div class="cv-section">
           <p class="intro-cv">Here's a more detailed version:</p>
@@ -84,7 +84,8 @@
 
           <p class="cv-subtitle">APPOINTMENTS</p>
           <ul class="cv-list">
-            <li><p class="cv-item"><b>Mellon Associate Research Scholar</b> - <a href="http://c4sr.columbia.edu/">Center for Spatial Research</a>, Columbia University, New York, NY (2015 - Present)</p></li>
+            <li><p class="cv-item"><b>Associate Research Scholar</b> - <a href="https://brown.columbia.edu/">Brown Institute for Media Innovation</a>, Columbia University, New York, NY (2018 - Present)</p></li>
+            <li><p class="cv-item"><b>Mellon Associate Research Scholar</b> - <a href="http://c4sr.columbia.edu/">Center for Spatial Research</a>, Columbia University, New York, NY (2015 - 2018)</p></li>
             <li><p class="cv-item"><b>Adjunct Assistant Professor</b> - <a href="http://www.arch.columbia.edu/">Graduate School of Architecture, Planning and Preservation</a>, Columbia University, New York, NY (2013 - Present)</p></li>
             <li><p class="cv-item"><b>Associate Research Scholar</b> - <a href="http://spatialinformationdesignlab.org/">Spatial Information Design Lab</a>, Columbia University, New York, NY (2013 - 2015)</p></li>
             <li><p class="cv-item"><b>Architectural Designer</b> - <a href="http://www.cz-studio.com/">Carlos Zapata Studio</a>, New York, NY (2012 - 2013)</p></li>
