changed nav bar

--- a/projects/dataThroughDesign.html
+++ b/projects/dataThroughDesign.html
@@ -56,10 +56,10 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
-                <li><a href="../index.html">HOME</a></li>
-                <li><a href="../projects.html">PROJECTS</a></li>
-                <li><a href="../about.html">ABOUT</a></li>
-              <li><a href="../news.html">NEWS & APPEARANCES</a></li>
+                <li><a href="../index.html">home</a></li>
+                <li><a href="../projects.html">projects</a></li>
+                <li><a href="../about.html">about</a></li>
+                <li><a href="../news.html">news</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
@@ -75,7 +75,7 @@
           <p>HOW WE DIE</p>
         </div>
         <div class="project-subtitle">
-          <p>This project was developed in collaboration with Steven Sanchez for the <a href="http://datathroughdesign.com/">Data Through Design</a> exhibition.</p>
+          <p>This project was developed in collaboration with <a href="https://steven-sanchez.com/">Steven Sanchez</a> for the <a href="http://datathroughdesign.com/">Data Through Design</a> exhibition.</p>
         </div>
         <div class="project-description">
           <p>Each year around 50,000 people die in New York City. Most of them from heart disease or cancer, others from diabetes or murder. But the causes of death remain varied and changing, and affect different populations differently. They are also growing or declining through time, and our methods for collecting, classifying, and reporting death are changing as well.</p>
