--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-              <li class="active"><a href="index.html">HOME<span class="sr-only">(current)</span></a></li>
-              <li><a href="projects.html">PROJECTS</a></li>
-              <li><a href="about.html">ABOUT</a></li>
-              <li><a href="news.html">NEWS & APPEARANCES</a></li>
+              <li class="active"><a href="index.html">home<span class="sr-only">(current)</span></a></li>
+              <li><a href="projects.html">projects</a></li>
+              <li><a href="about.html">about</a></li>
+              <li><a href="news.html">news</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
