--- a/news.html
+++ b/news.html
@@ -56,10 +56,10 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="index.html">HOME</a></li>
-              <li><a href="projects.html">PROJECTS</a></li>
-              <li><a href="about.html">ABOUT</a></li>
-              <li class="active"><a href="news.html">NEWS & APPEARANCES<span class="sr-only">(current)</span></a></li>
+              <li><a href="index.html">home</a></li>
+              <li><a href="projects.html">projects</a></li>
+              <li><a href="about.html">about</a></li>
+              <li class="active"><a href="news.html">news<span class="sr-only">(current)</span></a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
