--- a/projects/gsappAP.html
+++ b/projects/gsappAP.html
@@ -56,10 +56,10 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
-                <li><a href="../index.html">HOME</a></li>
-                <li><a href="../projects.html">PROJECTS</a></li>
-                <li><a href="../about.html">ABOUT</a></li>
-              <li><a href="../news.html">NEWS & APPEARANCES</a></li>
+                <li><a href="../index.html">home</a></li>
+                <li><a href="../projects.html">projects</a></li>
+                <li><a href="../about.html">about</a></li>
+                <li><a href="../news.html">news</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
@@ -75,7 +75,7 @@
           <p>GSAPP ALUMNI PROJECT</p>
         </div>
         <div class="project-subtitle">
-          <p>This project was developed in collaboration with Steven Sanchez.</p>
+          <p>This project was developed in collaboration with <a href="https://steven-sanchez.com/">Steven Sanchez</a>.</p>
         </div>
         <div class="row">
           <div class="col-md-4">
