--- a/about.html
+++ b/about.html
@@ -128,6 +128,7 @@
 
           <p class="cv-subtitle">LECTURES & PRESENTATIONS</p>
           <ul class="cv-list">
+            <li><p class="cv-item"><b>Conflict Urbanism: Colombia - The Memory of a Conflict Through a Single Dataset</b> - Saldarriaga, J. - Presented at the <a href="http://www.dukewired.org/visualization-and-the-holocaust/">Visualization and the Holocaust</a> conference, Nasher Museum of Art at Duke University, Durham, North Carolina, 2019.</p></li>
             <li><p class="cv-item"><b>Conflict Urbanism: Colombia & Aleppo</b> - Saldarriaga, J. - Presented at the <a href="https://nacis2017.sched.com/">NACIS Annual Conference</a>, Montreal, Canada, 2017 (<a href="https://speakerdeck.com/juanfrans/nacis-2017-conflict-urbanism-colombia-and-aleppo">slideshow</a>).</p></li>
             <li><p class="cv-item"><b>Spatial Regulation of Taxicab Services: Measuring Excess Travel from New York City</b> - Saldarriaga, J., King, D., - Presented at the <a href="http://wstlur.org/symposium/2017/">World Symposium on Transport and Land Use Research</a>, Brisbane, Australia, 2017.</p></li>
             <li><p class="cv-item"><b>Conflict Urbanism</b> - Saldarriaga, J. - Lecture for the <a href="https://las.depaul.edu/centers-and-institutes/studio-chi/Pages/news-events.aspx">Inaugural Programming "Foundations of the Digital, Foundations in the Humanities: Race, Gender, Class"</a> lecture series at Studio Chi, DePaul University, Chicago, 2017.</p></li>
