updated about and some project links

--- a/projects.html
+++ b/projects.html
@@ -105,7 +105,7 @@
             <a class="project-thumb" href="projects/eleccionesMundo.html">
               <img class="img-responsive" src="assets/img/thumbs/eleccionesMundo_alt.png" alt="thumb">
               <h2 class="project-title">ELECCIONES EN EL MUNDO</h2>
-              <p class="project-summary">An interactive map showing all upcoming (2017 - 2019) political elections around the world. In Spanish.</p>
+              <p class="project-summary">An interactive map showing all upcoming (2017 - 2019) political elections around the world.</p>
             </a>
           </div>
           <div class="col-md-4">
