updated cv and added mapping data flows project

--- a/index.html
+++ b/index.html
@@ -91,19 +91,28 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <a class="project-thumb" href="projects/conflictUrbanismColombia.html">
-              <img class="img-responsive" src="assets/img/thumbs/interactiveMapColombia.png" alt="thumb">
-              <h2 class="project-title">CONFLICT URBANISM: COLOMBIA</h2>
-              <p class="project-summary">An interactive mapping, data visualization, and spatial analysis project that examines the Colombian conflict and tries to understand its patterns and ramifications.</p>
+            <a class="project-thumb" href="projects/mappingDataFlows.html">
+              <img class="img-responsive" src="assets/img/thumbs/mappingDataFlows2.png" alt="thumb">
+              <h2 class="project-title">MAPPING DATA FLOWS</h2>
+              <p class="project-summary">Understanding how the largest technology companies collect, use, and share user information across the internet. We’ve
+              transformed the terms of service and data policies of Amazon, Apple, Facebook and Google into a database powering an interactive visualization.</p>
             </a>
           </div>
           <div class="col-md-4">
+            <a class="project-thumb" href="projects/conflictUrbanismColombia.html">
+              <img class="img-responsive" src="assets/img/thumbs/interactiveMapColombia.png" alt="thumb">
+              <h2 class="project-title">CONFLICT URBANISM: COLOMBIA</h2>
+              <p class="project-summary">An interactive mapping, data visualization, and spatial analysis project that examines
+                the Colombian conflict and tries to understand its patterns and ramifications.</p>
+            </a>
+          </div>
+          <!-- <div class="col-md-4">
             <a class="project-thumb" href="projects/environmental.html">
               <img class="img-responsive" src="assets/img/thumbs/environmental.png" alt="thumb">
               <h2 class="project-title">SPATIAL REGULATION OF TAXICAB SERVICES</h2>
               <p class="project-summary">A statistical and mapping analysis of the environmental cost associated with the spatial regulation of taxicabs in New York City.</p>
             </a>
-          </div>
+          </div> -->
           <div class="col-md-4">
             <a class="project-thumb" href="projects/access.html">
               <img class="img-responsive" src="assets/img/thumbs/unbanked_thumb.png" alt="thumb">
